--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </ul>
               </li>
               <li class="menu-item">
-                <a href="#what-we-do">WHAT WE DO</a>
+                <a href="#whatwedo">WHAT WE DO</a>
               </li>
               <li class="menu-item">
                 <a href="#" data-toggle="sub-menu">APPLY NOW</a>
@@ -138,7 +138,7 @@
 
     <!-- WHAT WE DO SECTION -->
 
-    <section class="services">
+    <section id="whatwedo" class="services">
       <h2>What We Do</h2>
       <div class="s-box-container">
         <div class="s-box">
