--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- ------------------------------------------------------------------------------------------------------ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -225,9 +227,15 @@
           </div>
           <div class="social-links">
             <!-- <a href="#"><em class="fab fa-facebook-f"></em></a> -->
-            <a href="#"><em class="fab fa-twitter"></em></a>
+            <a href="https://twitter.com/RealFelixManzi" target="_blank"
+              ><em class="fab fa-twitter"></em
+            ></a>
             <!-- <a href="#"><em class="fab fa-instagram"></em></a> -->
-            <a href="#"><em class="fab fa-linkedin-in"></em></a>
+            <a
+              href="https://www.linkedin.com/in/felix-manzi-1567221b5/"
+              target="_blank"
+              ><em class="fab fa-linkedin-in"></em
+            ></a>
           </div>
         </div>
 
@@ -236,18 +244,39 @@
           data-aos="fade-in"
           data-aos-delay="600"
         >
-          <img src="images/profile.svg" alt="" />
-          <div class="name">Sam Maize</div>
-          <div class="desig">Developer</div>
+          <img src="images/Moses.jpeg" alt="" />
+          <div class="name">Moses Karamuzi</div>
+          <div class="desig">
+            Co-Founder <br />
+            / Associate Director
+          </div>
           <div class="about">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
-            voluptatem!
+            <strong>Moses Karamuzi </strong> is a young man who is driven and
+            eager by his objectives. He currently goes to African Leadership
+            University Kigali Rwanda, pursuing an undergraduate degree in Global
+            Challenges majoring in Governance and Climate Change. Being an
+            Alumni of EducationUSA program 2019 under the US Embassy in Kigali,
+            Rwanda makes him exceptional in managing complex tasks. He completed
+            high school at New Life Christian Academy, where he held different
+            leadership responsibilities like Academic president.
           </div>
           <div class="social-links">
-            <a href="#"><em class="fab fa-facebook-f"></em></a>
-            <a href="#"><em class="fab fa-twitter"></em></a>
-            <a href="#"><em class="fab fa-instagram"></em></a>
-            <a href="#"><em class="fab fa-linkedin-in"></em></a>
+            <a
+              href="https://www.facebook.com/profile.php?id=100014248835461"
+              target="_blank"
+              ><em class="fab fa-facebook-f"></em
+            ></a>
+            <a href="https://twitter.com/Moses22615421" target="_blank"
+              ><em class="fab fa-twitter"></em
+            ></a>
+            <a href="https://www.instagram.com/karamuzi_moses/" target="_blank"
+              ><em class="fab fa-instagram"></em
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/karamuzi-moses-14108218a/"
+              target="_blank"
+              ><em class="fab fa-linkedin-in"></em
+            ></a>
           </div>
         </div>
 
@@ -256,18 +285,36 @@
           data-aos="fade-in"
           data-aos-delay="800"
         >
-          <img src="images/profile.svg" alt="" />
-          <div class="name">Sam Maize</div>
-          <div class="desig">Developer</div>
+          <img src="images/Deborah.jpeg" alt="" />
+          <div class="name">Deborah Kansiime</div>
+          <div class="desig">Finance / Operations Director</div>
           <div class="about">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
-            voluptatem!
+            <strong>Deborah Kansiime </strong> is a young committed lady, and a
+            first year student at the African Leadership University
+            Kigali-Rwanda, and the founder of Words & I club, pursuing an
+            undergraduate degree in Global Challenges majoring in Health Care.
+            She completed her Secondary school in Ecole des Sciences Byimana
+            (Byimana School of Sciences) where she was the first president of
+            the Health club, and had completed her Ordinary level in New Life
+            Christian Academy where she was the assistant Academic prefect.
           </div>
           <div class="social-links">
-            <a href="#"><em class="fab fa-facebook-f"></em></a>
-            <a href="#"><em class="fab fa-twitter"></em></a>
-            <a href="#"><em class="fab fa-instagram"></em></a>
-            <a href="#"><em class="fab fa-linkedin-in"></em></a>
+            <a href="https://www.facebook.com/debbie.constance" target="_blank"
+              ><em class="fab fa-facebook-f"></em
+            ></a>
+            <a href="https://twitter.com/DeborahKansiime" target="_blank"
+              ><em class="fab fa-twitter"></em
+            ></a>
+            <a
+              href="https://www.instagram.com/kansiime_deborah/"
+              target="_blank"
+              ><em class="fab fa-instagram"></em
+            ></a>
+            <a
+              href="http://www.linkedin.com/in/deborah-kansiime-9526461b6"
+              target="_blank"
+              ><em class="fab fa-linkedin-in"></em
+            ></a>
           </div>
         </div>
         <div
@@ -275,18 +322,31 @@
           data-aos="fade-in"
           data-aos-delay="1000"
         >
-          <img src="images/profile.svg" alt="" />
-          <div class="name">Sam Maize</div>
-          <div class="desig">Developer</div>
+          <img src="images/Nancy.jpeg" alt="" />
+          <div class="name">Nancy Leilla Mpundu</div>
+          <div class="desig">Communications Coordinator</div>
           <div class="about">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas,
-            voluptatem!
+            <strong>Nancy Leilla Mpundu</strong> is a student at Southern New
+            Hampshire University (SNHU) under the Kepler Program currently
+            pursuing her Bachelors of Arts in Communications with a
+            concentration in Business. He obtained an Associate Degree in
+            General Studies with a specialization in Business at SNHU. She works
+            as a content creator, operations manager, strategic communicator,
+            and social media manager at Lucid Communications.
           </div>
           <div class="social-links">
-            <a href="#"><em class="fab fa-facebook-f"></em></a>
-            <a href="#"><em class="fab fa-twitter"></em></a>
-            <a href="#"><em class="fab fa-instagram"></em></a>
-            <a href="#"><em class="fab fa-linkedin-in"></em></a>
+            <!-- <a href="#"><em class="fab fa-facebook-f"></em></a> -->
+            <a href="https://twitter.com/LeillaNancy" target="_blank"
+              ><em class="fab fa-twitter"></em
+            ></a>
+            <a href="https://www.instagram.com/leillanancy/" target="_blank"
+              ><em class="fab fa-instagram"></em
+            ></a>
+            <a
+              href=" https://www.linkedin.com/in/leilla-nancy-5a1817189/"
+              target="_blank"
+              ><em class="fab fa-linkedin-in"></em
+            ></a>
           </div>
         </div>
       </div>
@@ -341,7 +401,7 @@
             <div class="icon"><em class="fal fa-envelope"></em></div>
             <div class="text">
               <h3>Email</h3>
-              <p>jangbajantis@gmail.com</p>
+              <p>Info.myfootprintsinstitute@gmail.com</p>
             </div>
           </div>
         </div>
@@ -441,7 +501,7 @@
         </div>
       </div>
       <div class="footer__text">
-        <p>© My Footprint Institute, Inc. 2021. All Rights Reserved.</p>
+        <p>© My Footprints Institute, Inc. 2021. All Rights Reserved.</p>
       </div>
     </footer>
 
