first set of changes made

--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
         <p style="text-align: left">
           Our participants are welcome to engage in the “Social Enterprise Prize
           Competition.” Upon completion of the program, the competition winners
-          are awarded, among things, seed grants, connection to mentors in what
-          we call “Mentor-Mentee Matching” (MMM). Thus, the institute is run
-          around the question, “What would be my footprints when I leave earth?”
+          are awarded, among other things, seed grants, connection to mentors in
+          what we call “Mentor-Mentee Matching” (MMM). Thus, the Institute is
+          run around the theme: "What would be my footprints when I am no longer
+          on earth?"
         </p>
       </div>
     </div>
@@ -214,8 +215,8 @@
           <img src="images/f_manzi.jpg" alt="" />
           <div class="name">Felix Manzi</div>
           <div class="desig">
-            Executive Director <br />
-            / Co-Founder
+            Co-Founder <br />
+            / Executive Director
           </div>
           <div class="about">
             <strong>Felix Manzi </strong> is an adjunct lecturer at the School
