2nd set of changes made

--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
             / Associate Director
           </div>
           <div class="about">
-            <strong>Moses Karamuzi </strong> is a young man who is driven and
-            eager by his objectives. He currently goes to African Leadership
-            University Kigali Rwanda, pursuing an undergraduate degree in Global
-            Challenges majoring in Governance and Climate Change. Being an
-            Alumni of EducationUSA program 2019 under the US Embassy in Kigali,
-            Rwanda makes him exceptional in managing complex tasks. He completed
-            high school at New Life Christian Academy, where he held different
-            leadership responsibilities like Academic president.
+            <strong>Moses Karamuzi </strong> is goal oriented youth leader, who
+            is currently pursuing a degree in Global Challenges majoring in
+            Governance and Climate Change at the African Leadership University.
+            Moses, is also an alumna of EducationUSA program run by the
+            Department of State | U.S. Embassy Kigali. Moses, has also served as
+            the Residential Coordinator in the English Immersion Program, a role
+            that shaped his cross-cultural understanding skills and a leader he
+            has become.
           </div>
           <div class="social-links">
             <a
@@ -290,14 +290,13 @@
           <div class="name">Deborah Kansiime</div>
           <div class="desig">Finance / Operations Director</div>
           <div class="about">
-            <strong>Deborah Kansiime </strong> is a young committed lady, and a
-            first year student at the African Leadership University
-            Kigali-Rwanda, and the founder of Words & I club, pursuing an
-            undergraduate degree in Global Challenges majoring in Health Care.
-            She completed her Secondary school in Ecole des Sciences Byimana
-            (Byimana School of Sciences) where she was the first president of
-            the Health club, and had completed her Ordinary level in New Life
-            Christian Academy where she was the assistant Academic prefect.
+            <strong>Deborah Kansiime </strong> is a multitalented, passionate
+            leader and community organizer who has been in youth leadership
+            right from an early age— starting at the reputable Byimana School of
+            Sciences where she served as the first President of the Health Club.
+            Deborah later joined the African Leadership University where she’s
+            currently pursuing a degree in Global Challenges majoring in Health
+            Care. She’s also the founder of Words & I Club, among other roles.
           </div>
           <div class="social-links">
             <a href="https://www.facebook.com/debbie.constance" target="_blank"
@@ -327,12 +326,12 @@
           <div class="name">Nancy Leilla Mpundu</div>
           <div class="desig">Communications Coordinator</div>
           <div class="about">
-            <strong>Nancy Leilla Mpundu</strong> is a student at Southern New
-            Hampshire University (SNHU) under the Kepler Program currently
+            <strong>Nancy Leilla Mpundu</strong> is a student at the Southern
+            New Hampshire University (SNHU) under the Kepler Program, currently
             pursuing her Bachelors of Arts in Communications with a
             concentration in Business. He obtained an Associate Degree in
-            General Studies with a specialization in Business at SNHU. She works
-            as a content creator, operations manager, strategic communicator,
+            General Studies with a specialization in Business at SNHU. Nancy is
+            also a content creator, operations manager, strategic communicator,
             and social media manager at Lucid Communications.
           </div>
           <div class="social-links">
