2nd set of changes made

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
             / Associate Director
           </div>
           <div class="about">
-            <strong>Moses Karamuzi </strong> is goal oriented youth leader, who
-            is currently pursuing a degree in Global Challenges majoring in
+            <strong>Moses Karamuzi </strong> is a goal oriented youth leader,
+            who is currently pursuing a degree in Global Challenges majoring in
             Governance and Climate Change at the African Leadership University.
             Moses, is also an alumna of EducationUSA program run by the
             Department of State | U.S. Embassy Kigali. Moses, has also served as
