2nd set of changes made

--- a/index.html
+++ b/index.html
@@ -495,7 +495,11 @@
           <a href="https://twitter.com/myfootprintsi?lang=en" target="_blank"
             ><em class="fab fa-twitter"></em
           ></a>
-          <a href="#"><em class="fab fa-instagram"></em></a>
+          <a
+            href="https://www.instagram.com/myfootprints_institute/"
+            target="_blank"
+            ><em class="fab fa-instagram"></em
+          ></a>
           <a href="#"><em class="fab fa-linkedin-in"></em></a>
           <a href=""><em class="fab fa-youtube"></em></a>
         </div>
