--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
 
     <!-- CSS FILE -->
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- header start -->
